--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-Hello Js rocket
+<!DOCTYPE html>
+<html>
+<head>
+	<title>JS Rocket</title>
+	<script type="text/javascript" src="js/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<h1>Hello Js rocket</h1>
 
-<script type="text/javascript">
-	console.log('hello there friends!');
-</script>
+	<a href="#" onclick="sayMyName('Joe');">CLICK ME</a>
+
+	<a href="#" onclick="doCoolStuff();">CLICK ME</a>
+
+	<div class="cool" id="cool">
+		<p>Hello I'm Cool!</p>
+	</div>
+</body>
+</html>
+
+
+
